@@ -1,8 +1,8 @@
 Package: rmgarch
 Type: Package
 Title: Multivariate GARCH Models
-Version: 1.3-9
-Date: 2022-02-03
+Version: 1.4-0
+Date: 2022-03-04
 Author: Alexios Galanos <alexios@4dscape.com>
 Maintainer: Alexios Galanos <alexios@4dscape.com>
 Depends: R (>= 3.0.2), methods, rugarch (>=  1.4-7), parallel
