@@ -1,3 +1,8 @@
+2022-03-04 Alexios Galanos <alexios@4dscape.com>
+	* DESCRIPTION (Version): New version is 1.4-0.
+	* Fix to gogarchspec checks for mean.model (length>1 warning flagged in
+	a dependent package check on CRAN).
+	
 2022-02-05 Alexios Galanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.3-9.
 	* Fixes to CRAN note warnings on rugarch exports
